# hcole

./: README.md  hcole.cabal
Spea2/: Spea2.cabal
Spea2/src/: Spea2.hs
Spea2/src/Spea2/: Entity.hs  Types.hs
Spea2/src/Spea2/Entity/: NullEntity.hs
src/: featureGen.hs  hCole.hs
src/Cole/: Benchmark.hs  Compiler.hs  Entity.hs  Exploration.hs  Model.hs
src/Cole/Compiler/: LLVM.hs  Optimisation.hs
